# Fermitools-conda

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  activate.csh  activate.sh  activate_fermist.sh  azure-pipelines.yml  azure-pipelines.yml.orig  build.sh  build.sh.orig  conda_build_config.yaml  deactivate.csh  deactivate.sh  deactivate_fermist.sh  meta.yaml  multi_release.sh  packageList.txt  todo.txt
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-tag.yml
.ci_support/: linux_64_.yaml  linux_aarch64_.yaml  osx_64_.yaml  osx_arm64_.yaml
.scripts/: build_setup_linux.sh  build_setup_osx.sh  build_steps.sh  cross_compile_support.sh  download_osx_sdk.sh  increment_build_number.sh  increment_fermi_version.sh  increment_version.sh  logging_utils.sh  mangle_homebrew.sh  run_docker_build.sh  run_linux_build.sh  run_osx_build.sh  version_lessthan.sh
cmake/: Config.cmake.in  FindREADLINE.cmake  config.h.in
recipe/: activate.csh  activate.sh  build.sh  deactivate.csh  deactivate.sh  meta.yaml
recipe/tests/: ST-python-modules-test  ST-unit-test
recipe/toolchain/: cross-osx.cmake
